--- a/app/views/exercises/index.html.erb
+++ b/app/views/exercises/index.html.erb
@@ -11,6 +11,6 @@
     <p>Sets: <%= exercise.sets %></p>
     <p>Reps: <%= exercise.reps %></p>
 
-    <%= link_to "View", exercise, class: "btn btn-outline" %>
+    <%= link_to "View", exercise, class: "btn btn-primary" %>
   </div>
 <% end %>
