--- a/app/views/exercises/show.html.erb
+++ b/app/views/exercises/show.html.erb
@@ -1,10 +1,34 @@
-<p style="color: green"><%= notice %></p>
+<p class="notice"><%= notice %></p>
 
-<%= render @exercise %>
+<div class="show-card">
+  <h1 class="show-title"><%= @exercise.name %></h1>
 
-<div>
-  <%= link_to "Edit this exercise", edit_exercise_path(@exercise) %> |
-  <%= link_to "Back to exercises", exercises_path %>
+  <div class="show-stats">
+    <div class="stat">
+      <span class="stat-label">Weight</span>
+      <span class="stat-value"><%= @exercise.weight %> kg</span>
+    </div>
 
-  <%= button_to "Destroy this exercise", @exercise, method: :delete %>
+    <div class="stat">
+      <span class="stat-label">Sets</span>
+      <span class="stat-value"><%= @exercise.sets %></span>
+    </div>
+
+    <div class="stat">
+      <span class="stat-label">Reps</span>
+      <span class="stat-value"><%= @exercise.reps %></span>
+    </div>
+  </div>
+
+  <div class="button-group">
+  <%= link_to "Edit exercise", edit_exercise_path(@exercise), class: "btn btn-primary" %>
+  <%= link_to "Back to exercises", exercises_path, class: "btn btn-primary" %>
+
+  <%= button_to "Delete Exercise",
+                @exercise,
+                method: :delete,
+                class: "btn btn-delete" %>
+  </div>
+
 </div>
+
